<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="xyz.koiduste.kalkar.MainActivity">
        <item
            android:id="@+id/action_refresh"
            android:orderInCategory="100"
            android:title="@string/action_refresh"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="101"
            android:title="@string/action_delete"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_show_history"
            android:orderInCategory="101"
            android:title="@string/action_show_history"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_show_daysstats"
            android:orderInCategory="101"
            android:title="@string/action_show_daysstats"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_show_operandstats"
            android:orderInCategory="101"
            android:title="@string/action_show_operandstats"
            app:showAsAction="never" />
    </menu>